<resources>
    <string name="app_name">Provida Pesquisa Satisfacao</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou cadastre-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem vindo(a) !"</string>
    <string name="invalid_name">Seu usuário é invalido.</string>
    <string name="invalid_password">A sua senha precisa ter >5 caracteres</string>
    <string name="login_failed">"Login falhou!</string>
    <string name="title_login_string">Faça login para começar as pesquisas</string>
    <string name="title_question_atendimento">
        Em uma escala de 10 a 0
        QUAL A SUA AVALIAÇÃO GERAL
        QUANTO AO ATENDIMENTO DA
    </string>
    <string name="title_question_agilidade">
        Em uma escala de 10 a 0
        QUAL A SUA AVALIAÇÃO
        QUANTO À AGILIDADE NO ATENDIMENTO
    </string>
    <string name="title_question_estrutura">
        Qual sua satisfação com relação à estrutura do Multicentro Dr. Adriano Pondé?
    </string>
    <string name="title_question_limpeza">
        Qual sua satisfação com relação à limpeza do Multicentro Dr. Adriano Pondé?
    </string>
    <string name="title_question_atendimento_callcenter">
        JÁ FEZ USO DO ATENDIMENTO DO SERVIÇO DE CALL CENTER?
    </string>
    <string name="title_question_atendimento_callcenter_2">
        SE SIM, QUÃO FICOU SAFISTEITO (A)?
    </string>
    <string name="title_question_professional">
        JÁ RECEBEU ATENDIMENTO DE OUTROS PROFISSIONAIS?
    </string>
    <string name="title_question_professional2">
        SE SIM, QUAL (IS) ESPECIALIDADE (S)?
    </string>
    <string name="question_assistencia">Assistência Social</string>
    <string name="question_nutricao">Nutrição</string>
    <string name="question_odontologia">Odontologia</string>
    <string name="question_psicologia">Psicologia</string>
    <string name="title_question_multicentro">
        SATISFAÇÃO GERAL COM O ATENDIMENTO DO MULTICENTRO
    </string>
    <string name="title_question_multicentro_2">
        Quão Satisfeito (a) com o Atendimento do Multicentro de Amaralina
    </string>
    <string name="question_sim">Sim</string>
    <string name="question_nao">Não</string>
    <string name="title_question_enf">Equipe da Enfermagem</string>
    <string name="title_question_farm">Equipe da Farmácia</string>
    <string name="title_question_marc">Equipe da Marcação</string>
    <string name="title_question_recep">Equipe da Recepção</string>
    <string name="title_question_adm">Equipe de Administração</string>
    <string name="title_question_vac">Equipe de Vacinação</string>
    <string name="title_question_lab">Equipe do Laboratório</string>
    <string name="title_question_med">Equipe Médica</string>
    <string name="title_question_reclamar">
        DESEJA REGISTRAR ALGUMA RECLAMAÇÃO?
    </string>
    <string name="title_question_reclamar2">
        DESEJA REGISTRAR ALGUMA SUGESTÃO?
    </string>
    <string name="title_finish">
        Agradecemos sua colaboração!
        Estes dados servirão para melhorarmos o atendimento para você.
    </string>
    <string name="provida_logomarca">Provida logomarca</string>
    <string name="imagem_da_enfermagem">Imagem da Enfermagem - Ilustração</string>
    <string name="boa">BOA</string>
    <string name="ruim">RUIM</string>
    <string name="regular">REGULAR</string>
    <string name="otima">OTIMA</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_10">10</string>
    <string name="_7">7</string>
    <string name="continuar">Continuar</string>
    <string name="voltar">Voltar</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="iniciar_pesquisa_title">Bem-vindo á Pesquisa de Satisfação, digite o nome do paciente e o contato para continuar</string>
    <string name="nome_do_paciente">Nome do Paciente</string>
    <string name="iniciar_pesquisa">Iniciar Pesquisa</string>
    <string name="contato">Contato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_registered_message">Você já está cadastrado(a)! Por favor realize o login com sua senha.</string>
    <string name="empty_fills_message">Por favor, preencha todos os campos.</string>
    <string name="wrong_user_inputs">Usuario ou senha incorretos!</string>
    <string name="sucessful_signup">Você foi cadastrado com sucesso!</string>
    <string name="logotype">Logotype</string>
    <string name="campo_para_registro_de_sugest_o_se_houver">Campo para registro de sugestão (se houver)</string>
    <string name="campo_para_registro_de_reclama_o_se_houver">Campo para registro de reclamação (se houver)</string>
    <string name="finalizar">Finalizar</string>
    <string name="carregar_pesquisas">Carregar Pesquisas</string>
    <string name="sua_quantidade_de_pesquisas_s_o">Sua quantidade de pesquisas são:</string>
    <string name="yes_callcenter">Sim já utilizei os serviços de callcenter.</string>
    <string name="estrutura_title">ESTRUTURA</string>
    <string name="title_content_limpeza">LIMPEZA</string>
    <string name="answer_nulo">Nulo</string>
    <string name="not_answering">Não respondeu</string>
    <string name="callcenter_title">CALLCENTER</string>
    <string name="limpeza_title">LIMPEZA</string>
    <string name="geral_title">GERAL</string>
    <string name="name">Seu Nome e Sobrenome</string>
    <string name="question_content_reclamacao">RECLAMACAO</string>
    <string name="question_content_sugestao">SUGESTAO</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="dialog_pesquisa_title">Baixar e Importar Pesquisas</string>
</resources>