<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_card_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.questions.QuestionFragment"
        tools:viewBindingIgnore="true">

        <!-- Discrete slider -->

        <ImageView
            android:id="@+id/logotype_provida_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="636dp"
            android:contentDescription="@string/provida_logomarca"
            android:src="@drawable/provida_logomarca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/title_atendimento_agilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/title_question_agilidade"
            android:textAlignment="center"
            android:textColor="@color/blue_700"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logotype_provida_2" />

        <ImageView
            android:id="@+id/img_enfermagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/imagem_da_enfermagem"
            android:src="@drawable/enfermagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_content_agilidade" />

        <TextView
            android:id="@+id/title_content_agilidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_question_enf"
            android:textAlignment="center"
            android:textColor="@color/blue_700"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_atendimento_agilidade"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_quality_agilidade"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stepSize="3.0"
            android:valueFrom="1.0"
            android:valueTo="10.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_enfermagem" />

        <LinearLayout
            android:id="@+id/question_classification"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_quality_agilidade">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="inherit">

                <TextView
                    android:id="@+id/txt_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/txt_ruim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ruim" />
            </LinearLayout>

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="inherit">

                <TextView
                    android:id="@+id/txt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4" />

                <TextView
                    android:id="@+id/txt_boa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boa" />
            </LinearLayout>

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="inherit">

                <TextView
                    android:id="@+id/txt_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7" />

                <TextView
                    android:id="@+id/txt_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular" />
            </LinearLayout>

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="inherit">

                <TextView
                    android:id="@+id/txt_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10" />

                <TextView
                    android:id="@+id/txt_otima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otima" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_continuar_agilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/background_rounded_button"
            android:padding="16dp"
            android:text="@string/continuar"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_classification"
            app:layout_constraintVertical_bias="0.218" />

        <Button
            android:id="@+id/btn_voltar_agilidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/background_rounded_button_outline"
            android:padding="16dp"
            android:text="@string/voltar"
            android:textAllCaps="false"
            android:textColor="@color/blue_700"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_continuar_agilidade"
            app:layout_constraintVertical_bias="0.146" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>