<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_card_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.questions.QuestionFragment"
        tools:viewBindingIgnore="true">

        <!-- Discrete slider -->

        <ImageView
            android:id="@+id/logotype_provida_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="636dp"
            android:contentDescription="@string/provida_logomarca"
            android:src="@drawable/provida_logomarca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <TextView
            android:id="@+id/title_atendimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="36dp"
            android:text="@string/title_finish"
            android:textAlignment="center"
            android:textColor="@color/blue_700"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logotype_provida_2" />

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/background_rounded_button"
            android:padding="16dp"
            android:text="@string/finalizar"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_atendimento"
            app:layout_constraintVertical_bias="0.218" />

        <Button
            android:id="@+id/btn_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/background_rounded_button_outline"
            android:padding="16dp"
            android:text="@string/voltar"
            android:textAllCaps="false"
            android:textColor="@color/blue_700"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_continuar"
            app:layout_constraintVertical_bias="0.146" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>